processed/gerrit/txt_full/51819.txt
Change:     51819
Subject:    LU-16980 build: fix gcc-12 [-Werror=use-after-free] error
Link:       https://review.whamcloud.com/c/fs/lustre-release/+/51819
Change-Id:  Ibe783ab0d13e2ecde1736946323932ab5db53740
Project:    fs/lustre-release
Branch:     master
Status:     MERGED
Owner:      Jian Yu
Created:    2023-07-31 17:32:57.000000000
Updated:    2023-08-07 03:51:06.000000000
Patch Set:  2
Insertions: +1
Deletions:  -2
Comments:   1 (1 unresolved)

--- Labels ---
  Code-Review: Andreas Dilger: +1; Oleg Drokin: +2; Timothy Day: +1
  Verified: jenkins: +1; Maloo: +1

--- Reviewers ---
  REVIEWER: Oleg Drokin, Andreas Dilger, Timothy Day

--- Commit Message ---
LU-16980 build: fix gcc-12 [-Werror=use-after-free] error

This patch fixes the following [-Werror=use-after-free] and
[-Werror=stringop-overflow=] errors detected by gcc 12:

libcfs/include/libcfs/util/list.h:481:42: error: pointer 'tmp'
used after 'free' [-Werror=use-after-free]
  481 |              pos = list_entry(pos->member.next, typeof(*pos), member),  \
      |                                          ^
libcfs/include/libcfs/util/list.h:239:28: note: in definition of macro 'list_entry'
  239 |         ((type *)((char *)(ptr)-(char *)(&((type *)0)->member)))
      |                            ^~~
obd.c:5118:9: note: in expansion of macro 'list_for_each_entry'
 5118 |         list_for_each_entry(tmp, head, lpn_list) {
      |         ^~~~~~~~~~~~~~~~~~~
obd.c:5124:17: note: call to 'free' here
 5124 |                 free(tmp);
      |                 ^~~~~~~~~

test_brw.c: In function 'main':
test_brw.c:227:22: error: 'write' specified size between 9223372036854775808
and 18446744073709551615 exceeds maximum object size 9223372036854775807
[-Werror=stringop-overflow=]
  227 |                 rc = write(fd, buf, len);
      |                      ^~~~~~~~~~~~~~~~~~~

Change-Id: Ibe783ab0d13e2ecde1736946323932ab5db53740
Signed-off-by: Jian Yu <yujian@whamcloud.com>
Reviewed-on: https://review.whamcloud.com/c/fs/lustre-release/+/51819
Tested-by: jenkins <devops@whamcloud.com>
Tested-by: Maloo <maloo@whamcloud.com>
Reviewed-by: Andreas Dilger <adilger@whamcloud.com>
Reviewed-by: Timothy Day <timday@amazon.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>

--- Review History ---

--- Message (Jian Yu, 2023-07-31 17:32:57.000000000) ---
Uploaded patch set 1.

--- Message (Lustre Gerrit Janitor, 2023-07-31 17:34:41.000000000) ---
Patch Set 1:

Builds for x86_64 centos7,rhel8.5 successful
Job output URL: https://testing.whamcloud.com/gerrit-janitor/33094/results.html

 Commencing initial testing: runtests@ldiskfs+DNE runtests-ssk@ldiskfs+SharedKey runtests@zfs

--- Message (wc-checkpatch, 2023-07-31 17:35:10.000000000) ---
Patch Set 1:

Looks good to me.

--- Message (Lustre Gerrit Janitor, 2023-07-31 17:42:00.000000000) ---
Patch Set 1:

Initial testing succeeded.

Succeeded:
- runtests@ldiskfs+DNE runtests-ssk@ldiskfs+SharedKey runtests@zfs 

(centos7)All results and logs: https://testing.whamcloud.com/gerrit-janitor/33094/results.html
Commencing standard testing: 
- conf-sanity1@ldiskfs+DNE conf-sanity2@ldiskfs+DNE conf-sanity3@ldiskfs+DNE conf-sanity-slow@ldiskfs+DNE conf-sanity-slow-106@ldiskfs+DNE conf-sanity1@zfs conf-sanity2@zfs conf-sanity3@zfs conf-sanity-slow@zfs conf-sanity-slow-106@zfs insanity@ldiskfs+DNE insanity@zfs lnet-selftest@zfs lustre-rsync-test@ldiskfs+DNE lustre-rsync-test@zfs ost-pools@ldiskfs+DNE ost-pools@zfs pjdfstest@ldiskfs+DNE pjdfstest@zfs racer@ldiskfs+DNE racer@zfs recovery-small@ldiskfs+DNE recovery-small@zfs replay-dual@ldiskfs+DNE replay-dual@zfs replay-ost-single@ldiskfs+DNE replay-ost-single@zfs replay-single@ldiskfs+DNE replay-single@zfs replay-vbr@ldiskfs+DNE replay-vbr@zfs sanity1@ldiskfs+DNE sanity2@ldiskfs+DNE sanity-slow@ldiskfs+DNE sanity1@zfs sanity2@zfs sanity-slow@zfs sanity-benchmark@ldiskfs+DNE sanity-benchmark@zfs sanity-dom@ldiskfs+DNE sanity-dom@zfs sanity-flr@ldiskfs+DNE sanity-flr@zfs sanity-hsm@ldiskfs+DNE sanity-hsm@zfs sanity-lfsck@ldiskfs+DNE sanity-lfsck@zfs sanity-lnet@zfs sanity-pcc@ldiskfs+DNE sanity-pcc@zfs sanity-pfl@ldiskfs+DNE sanity-pfl@zfs sanity-quota@ldiskfs+DNE sanity-quota@zfs sanity-scrub@ldiskfs+DNE sanity-scrub@zfs sanity-sec@ldiskfs+DNE sanity-sec@zfs sanityn@ldiskfs+DNE sanityn@zfs

--- Message (jenkins, 2023-07-31 17:59:17.000000000) ---
Patch Set 1: Verified+1

Build Successful 

https://build.whamcloud.com/job/lustre-reviews/96541/ : SUCCESS

--- Message (Maloo, 2023-07-31 18:00:04.000000000) ---
Patch Set 1:

The following sessions will be run for build 96541 patch 1

Enforced:
- review-ldiskfs on el8.8-x86_64/ldiskfs servers and clients
- review-zfs on el8.8-x86_64/zfs servers and clients
- review-dne-part-1 on el8.8-x86_64/ldiskfs servers and clients
- review-dne-part-2 on el8.8-x86_64/ldiskfs servers and clients
- review-dne-part-3 on el8.8-x86_64/ldiskfs servers and clients
- review-dne-part-4 on el8.8-x86_64/ldiskfs servers and clients
- review-dne-part-5 on el8.8-x86_64/ldiskfs servers and clients
- review-dne-part-6 on el8.8-x86_64/ldiskfs servers and clients
- review-dne-part-7 on el8.8-x86_64/ldiskfs servers and clients
- review-dne-zfs-part-1 on el8.8-x86_64/zfs servers and clients
- review-dne-zfs-part-2 on el8.8-x86_64/zfs servers and clients
- review-dne-zfs-part-3 on el8.8-x86_64/zfs servers and clients
- review-dne-zfs-part-4 on el8.8-x86_64/zfs servers and clients
- review-dne-zfs-part-5 on el8.8-x86_64/zfs servers and clients
- review-dne-zfs-part-6 on el8.8-x86_64/zfs servers and clients
- review-dne-zfs-part-7 on el8.8-x86_64/zfs servers and clients
- review-ldiskfs-arm on el8.8-x86_64/ldiskfs servers and el8.7-aarch64/ldiskfs clients
- review-dne-selinux-ssk-part-1 on el8.8-x86_64/ldiskfs servers and clients
- review-dne-selinux-ssk-part-2 on el8.8-x86_64/ldiskfs servers and clients
- review-ldiskfs on el8.8-x86_64/ldiskfs servers and el9.2-x86_64/ldiskfs clients

Optional:
- review-dne-part-8 on el8.8-x86_64/ldiskfs servers and clients
- review-dne-part-9 on el8.8-x86_64/ldiskfs servers and clients
- review-ldiskfs on el9.2-x86_64/ldiskfs servers and clients
- review-ldiskfs on el8.8-x86_64/ldiskfs servers and sles15sp4-x86_64/ldiskfs clients
- review-ldiskfs-ubuntu on el8.8-x86_64/ldiskfs servers and ubuntu2204-x86_64/ldiskfs clients

Maloo Test Queue: https://testing.whamcloud.com/test_queue?jobs=lustre-reviews&builds=96541&commit=Apply+Filter
Maloo Results: https://testing.whamcloud.com/test_sessions/related?jobs=lustre-reviews&builds=96541#redirect

--- Message (Andreas Dilger, 2023-07-31 20:12:20.000000000) ---
Patch Set 1: Code-Review+1

--- Message (Lustre Gerrit Janitor, 2023-07-31 20:29:24.000000000) ---
Patch Set 1:

Testing has completed with errors!

> replay-dual@ldiskfs+DNE Failure(2784s)
- cleanup(No status. Crash?) 

Succeeded:
- conf-sanity1@ldiskfs+DNE conf-sanity2@ldiskfs+DNE conf-sanity3@ldiskfs+DNE conf-sanity-slow@ldiskfs+DNE conf-sanity-slow-106@ldiskfs+DNE conf-sanity1@zfs conf-sanity2@zfs conf-sanity3@zfs conf-sanity-slow@zfs conf-sanity-slow-106@zfs insanity@ldiskfs+DNE insanity@zfs lnet-selftest@zfs lustre-rsync-test@ldiskfs+DNE lustre-rsync-test@zfs ost-pools@ldiskfs+DNE ost-pools@zfs pjdfstest@ldiskfs+DNE pjdfstest@zfs racer@ldiskfs+DNE racer@zfs recovery-small@ldiskfs+DNE recovery-small@zfs replay-dual@zfs replay-ost-single@ldiskfs+DNE replay-ost-single@zfs replay-single@ldiskfs+DNE replay-single@zfs replay-vbr@ldiskfs+DNE replay-vbr@zfs sanity1@ldiskfs+DNE sanity2@ldiskfs+DNE sanity-slow@ldiskfs+DNE sanity1@zfs sanity2@zfs sanity-slow@zfs sanity-benchmark@ldiskfs+DNE sanity-benchmark@zfs sanity-dom@ldiskfs+DNE sanity-dom@zfs sanity-flr@ldiskfs+DNE sanity-flr@zfs sanity-hsm@ldiskfs+DNE sanity-hsm@zfs sanity-lfsck@ldiskfs+DNE sanity-lfsck@zfs sanity-lnet@zfs sanity-pcc@ldiskfs+DNE sanity-pcc@zfs sanity-pfl@ldiskfs+DNE sanity-pfl@zfs sanity-quota@ldiskfs+DNE sanity-quota@zfs sanity-scrub@ldiskfs+DNE sanity-scrub@zfs sanity-sec@ldiskfs+DNE sanity-sec@zfs sanityn@ldiskfs+DNE sanityn@zfs 

(centos7)All results and logs: https://testing.whamcloud.com/gerrit-janitor/33094/results.html

--- Message (Maloo, 2023-07-31 22:46:51.000000000) ---
Patch Set 1:

Failed optional test review-ldiskfs-ubuntu on RHEL 8.8/x86_64, Ubuntu 22.04/x86_64 uploaded by Onyx Autotest from onyx-109vm6: https://testing.whamcloud.com/test_sessions/0113a9ab-1147-4689-b7ac-24356f4dc89c ran 6 tests.  1 tests failed: sanity-sec.

--- Message (Maloo, 2023-08-01 00:09:44.000000000) ---
Patch Set 1:

Failed optional test review-dne-part-8 on RHEL 8.8/x86_64 uploaded by Trevis Autotest from trevis-100vm13: https://testing.whamcloud.com/test_sessions/5bc4ba23-4787-4541-ac12-b2358f004d0c ran 6 tests.  1 tests failed: racer.

--- Message (Timothy Day, 2023-08-01 01:02:37.000000000) ---
Patch Set 1: Code-Review+1

--- Message (Maloo, 2023-08-01 03:10:55.000000000) ---
Patch Set 1:

Failed optional test review-dne-part-9 on RHEL 8.8/x86_64 uploaded by Onyx Autotest from onyx-50vm1: https://testing.whamcloud.com/test_sessions/546789db-c17b-4ae7-95b1-c1a852fa852d ran 11 tests.  2 tests failed: parallel-scale-nfsv4, obdfilter-survey.

--- Message (Maloo, 2023-08-01 03:45:39.000000000) ---
Patch Set 1: Verified+1

Passed enforced test review-dne-part-3 on RHEL 8.8/x86_64 uploaded by Onyx Autotest from onyx-77vm1: https://testing.whamcloud.com/test_sessions/6cf919ae-febd-45c2-be50-fdd39a34b45e ran 3 tests.

--- Message (Oleg Drokin, 2023-08-07 03:51:03.000000000) ---
Patch Set 1: Code-Review+2

(1 comment)

--- Message (Oleg Drokin, 2023-08-07 03:51:06.000000000) ---
Change has been successfully cherry-picked as c13d919564cf6692a794fe1ceb1875971f8cde03 by Oleg Drokin
